--- a/hyprland.conf
+++ b/hyprland.conf
@@ -9,8 +9,8 @@
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Set programs that you use
-$terminal = kitty
-$run = kitty -e 
+$terminal = ghostty
+$run = ghostty -e 
 $fileManager = $terminal --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
 $mainMod = SUPER # Sets "Windows" key as main modifier
@@ -78,8 +78,8 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
-bind = $mainMod, Space, layoutmsg, swapwithmaster
+bind = $mainMod Ctrl, P, exec, $bin/pwm #-> Password Manager
+bind = $mainMod, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 
 # bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
