--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -7,12 +7,19 @@ workspace = name:Home, monitor:$OutputLeft, default:true, defaultName:Home, deco
 workspace = name:Web, monitor:$OutputLeft, defaultName:Web, decorate:true, on-created-empty:google-chrome-stable
 workspace = name:Krita, monitor:$OutputLeft, defaultName:Drawing, on-created-empty:krita
 workspace = name:Facebook, monitor:$OutputLeft, defaultName:Facebook, decorate:true, on-created-empty:qutebrowser www.facebook.com www.messenger.com
+workspace = 1, monitor:$OutputLeft, defaultName:Chat, decorate:true
+workspace = 3, monitor:$OutputLeft, defaultName:Chat, decorate:true
+workspace = 5, monitor:$OutputLeft, defaultName:Chat, decorate:true
+workspace = 7, monitor:$OutputLeft, defaultName:Chat, decorate:true
+workspace = 9, monitor:$OutputLeft, defaultName:Chat, decorate:true
 
 # Small Monitor
 
 monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
 workspace = name:Code, monitor:$OutputRight, defaultName:Code, on-created-empty:kitty -e tmux, decorate:true
 workspace = name:Music, monitor:$OutputRight, defaultName:Music, decorate:true, on-created-empty:kitty -e ncmpcpp --host localhost
+workspace = 2, monitor:$OutputRight, defaultName:Chat, decorate:true
+workspace = 4, monitor:$OutputRight, defaultName:Chat, decorate:true
+workspace = 6, monitor:$OutputRight, defaultName:Chat, decorate:true
 workspace = 8, monitor:$OutputRight, defaultName:Chat, decorate:true
-workspace = 9, monitor:$OutputRight, defaultName:Files, decorate:true
-# workspace = 0, monitor:$OutputRight, defaultName:Scratch, decorate:true
+workspace = 0, monitor:$OutputRight, defaultName:Files, decorate:true
