--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -29,7 +29,7 @@ bind = , k, exec, killall mako #-> kill mako
 #-s
 bind = , i, exec, smc -n info_script #-> Info Files
 bind = , e, exec, smc -n ~/bin/mail #-> Send Email
-bind = SHIFT, e, exec, smc -n "kitty -e nvim ~/bin/mail" #-> Edit Email list
+bind = SHIFT, e, exec, smc -n "ghostty -e nvim ~/bin/mail" #-> Edit Email list
 bind = , p, exec, smc -n ~/bin/pwm #-> Stuff
 bind = , t, exec, smc -n ~/bin/tab #-> Stuff
 bind = SHIFT, m, exec, smc -n "$terminal -e mr" #-> Update Mirrors
@@ -72,7 +72,7 @@ bind = , escape, submap, reset
 submap = reset
 
 # NOTE: --------------------------------------------
-bind = $mainMod, Return, submap, Quick_Menu
+bind = , XF86Search, submap, Quick_Menu
 submap = Quick_Menu
 bind = , Return, exec, smc -n "new_term.sh" #-> Terminal
 #-s
@@ -83,17 +83,18 @@ bind = , Return, exec, smc -n "new_term.sh" #-> Terminal
 #-s (f)acebook
 #-s (c)ode
 #-s (m)usicm
+#-s 1 - 10
 #-s
 #-s Layouts
-bind = , s, exec, hyprctl keyword general:layout scrolling #-> Set layout to scrolling
-bind = , d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwindle
-bind = , m, exec, hyprctl keyword general:layout master #-> Set layout to master
+bind = Ctrl, s, exec, hyprctl keyword general:layout scrolling #-> Set layout to scrolling
+bind = Ctrl, d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwindle
+bind = Ctrl, m, exec, hyprctl keyword general:layout master #-> Set layout to master
 #-s
 #-s Toggle bar
-#-s 1: left
-#-s 2: right
-bind = , 1, exec, bar -b #-d
-bind = , 2, exec, bar -s #-d
+#-Ctrl + s 1: left
+#-Ctrl + s 2: right
+bind = Ctrl, 1, exec, bar -b #-d
+bind = Ctrl, 2, exec, bar -s #-d
 
 bind = , h, exec, smc -h "workspace name:Home" #-d
 bind = , w, exec, smc -h "workspace name:Web" #-d
@@ -101,6 +102,16 @@ bind = , k, exec, smc -h "workspace name:Krita" #-d
 bind = , f, exec, smc -h "workspace name:Facebook" #-d
 bind = , c, exec, smc -h "workspace name:Code" #-d
 bind = , m, exec, smc -h "workspace name:Music" #-d
+bind = , 1, exec, smc -h "workspace 1" #-d
+bind = , 2, exec, smc -h "workspace 2" #-d
+bind = , 3, exec, smc -h "workspace 3" #-d
+bind = , 4, exec, smc -h "workspace 4" #-d
+bind = , 5, exec, smc -h "workspace 5" #-d
+bind = , 6, exec, smc -h "workspace 6" #-d
+bind = , 7, exec, smc -h "workspace 7" #-d
+bind = , 8, exec, smc -h "workspace 8" #-d
+bind = , 9, exec, smc -h "workspace 9" #-d
+bind = , 0, exec, smc -h "workspace 0" #-d
 
 bind =  SHIFT, h,exec, smc -h "movetoworkspace name:Home" #-d
 bind =  SHIFT, w, exec, smc -h "movetoworkspace name:Web" #-d
@@ -108,10 +119,16 @@ bind =  SHIFT, k, exec, smc -h "movetoworkspace name:Krita" #-d
 bind =  SHIFT, f, exec, smc -h "movetoworkspace name:Facebook" #-d
 bind =  SHIFT, c, exec, smc -h "movetoworkspace name:Code" #-d
 bind =  SHIFT, m, exec, smc -h "movetoworkspace name:Music" #-d
-bind =  , 7, exec, smc -h "movetoworkspace 7" #-d
-bind =  , 8, exec, smc -h "movetoworkspace 8" #-d
-bind =  , 9, exec, smc -h "movetoworkspace 9" #-d
-bind =  , 0, exec, smc -h "movetoworkspace 10" #-d
+bind = SHIFT, 1, exec, smc -h "movetoworkspace 1" #-d
+bind = SHIFT, 2, exec, smc -h "movetoworkspace 2" #-d
+bind = SHIFT, 3, exec, smc -h "movetoworkspace 3" #-d
+bind = SHIFT, 4, exec, smc -h "movetoworkspace 4" #-d
+bind = SHIFT, 5, exec, smc -h "movetoworkspace 5" #-d
+bind = SHIFT, 6, exec, smc -h "movetoworkspace 6" #-d
+bind = SHIFT, 7, exec, smc -h "movetoworkspace 7" #-d
+bind = SHIFT, 8, exec, smc -h "movetoworkspace 8" #-d
+bind = SHIFT, 9, exec, smc -h "movetoworkspace 9" #-d
+bind = SHIFT, 0, exec, smc -h "movetoworkspace 10" #-d
 #-s
 #-s Scrolling
 bind = , left, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
