--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -50,6 +50,16 @@ windowrule {
 }
 
 windowrule {
+		name = ghostty
+		match:class = com.mitchellh.ghostty
+		float = false
+		opacity = 1.0
+
+        # size = 360 532
+		# move = 2150 110
+}
+
+windowrule {
 		name = music scroller
 		match:class = Tk
 		float = true
