--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
-    monitor =
-    path = /home/mike/wallpaper/treemountain.jpg
+    monitor = HDMI-A-1
+    path = /home/mike/wallpaper/dark/abstract-lines-dark-4k-mg.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -13,6 +13,21 @@ background {
     vibrancy_darkness = 0.0
 }
 
+
+background {
+    monitor = DVI-D-1
+    path = /home/mike/wallpaper/dark/dark_stairs.jpg
+    color = rgba(25, 20, 20, 1.0)
+
+    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    blur_passes = 0 # 0 disables blurring
+    blur_size = 7
+    noise = 0.0117
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
+}
 # shape {
 #     monitor = HDMI-A-1
 #     size = 740, 740
