--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -8,7 +8,7 @@
 master {
 		mfact = 0.55
 		orientation = center
-		slave_count_for_center_master = 2
+		slave_count_for_center_master = 3
 		center_master_fallback = center
 		always_keep_position = false
 
@@ -63,7 +63,7 @@ plugin {
         # class is an EXACT match and NOT a regex!
         class = GLava
         # you can also use title
-        # title = kitty-bg
+        # title = ghostty-bg
         # you can add the position of the window in a percentage
         # pos_x = 25
         # pos_y = 30
