--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -16,10 +16,12 @@ workspace = 9, monitor:$OutputLeft, defaultName:Chat, decorate:true
 # Small Monitor
 
 monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
-workspace = name:Code, monitor:$OutputRight, defaultName:Code, on-created-empty:kitty -e tmux, decorate:true
-workspace = name:Music, monitor:$OutputRight, defaultName:Music, decorate:true, on-created-empty:kitty -e ncmpcpp --host localhost
-workspace = 2, monitor:$OutputRight, defaultName:Chat, decorate:true
-workspace = 4, monitor:$OutputRight, defaultName:Chat, decorate:true
-workspace = 6, monitor:$OutputRight, defaultName:Chat, decorate:true
-workspace = 8, monitor:$OutputRight, defaultName:Chat, decorate:true
-workspace = 0, monitor:$OutputRight, defaultName:Files, decorate:true
+workspace = name:Code, monitor:$OutputRight, defaultName:Code, on-created-empty:ghostty -e tmux, decorate:true
+workspace = name:Music, monitor:$OutputRight, defaultName:Music, decorate:true, on-created-empty:ghostty -e ncmpcpp --host localhost
+workspace = name:Email, monitor:$OutputRight, defaultName:Email, decorate:true, on-created-empty:evolution
+workspace = 2, monitor:$OutputRight, defaultName:(2) Files, decorate:true
+workspace = 4, monitor:$OutputRight, defaultName:(4) Chat, decorate:true
+workspace = 6, monitor:$OutputRight, defaultName:(6) Chat, decorate:true
+workspace = 8, monitor:$OutputRight, defaultName:(8) Chat, decorate:true
+workspace = 0, monitor:$OutputRight, defaultName:(0) Files, decorate:true
+
