--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -2,18 +2,14 @@
 
 
 # ST_servers
-workspace = special:ST_servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='ST_servers' -e svs
+workspace = special:ST_servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='ST_servers' -e svs
 bind = , KP_Page_Up, togglespecialworkspace, ST_servers
 bind = , KP_Page_Up, exec, resize_center.sh 95% 95%
 
-workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] kitty --title='sti' -e sti
+workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] ghostty --title='sti' -e sti
 bind = , KP_Page_Down, togglespecialworkspace, sti
 bind = , KP_Page_Down, exec, resize_center.sh 98% 95%
 
-# music
-workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --config ~/.config/kitty/floating_kitty.conf --title='mpdClient' -e ncmpcpp --host localhost
-bind = , XF86Tools, togglespecialworkspace, mpdClient
-bind = , XF86Tools, exec, resize_center.sh 95% 90%
 
 # glava
 workspace = special:glavaWS, rounding:false, monitor:0, on-created-empty: glava
@@ -23,7 +19,7 @@ workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; s
 bind = , XF86Mail, togglespecialworkspace, email
 bind = , XF86Mail, exec, resize_center.sh 95% 95%
 # filemanagers
-workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
+workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty -e yazi
 bind = $mainMod, e, togglespecialworkspace, my_yazi
 bind = $mainMod, e, exec, resize_center.sh 95% 92%
 
@@ -39,20 +35,20 @@ bind = $mainMod SHIFT, e, togglespecialworkspace, fm
 bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
 # notes
-windowrule {
-		name = notes
-		float = true
-		match:title = notes
-
-		size = 1190 1390
-		animation = popin
-}
-
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:kitty --config ~/.config/kitty/floating_kitty.conf --title='notes' -e nvim /home/mike/md_notes/index.md
+# windowrule {
+# 		name = notes
+# 		float = true
+# 		match:title = notes
+#
+# 		size = 1190 1390
+# 		animation = popin
+# }
+#
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:ghostty  --title='notes' -e nvim /home/mike/md_notes/index.md
 bind = , XF86Calculator, togglespecialworkspace, notes
 bind = , XF86Calculator, focusmonitor, HDMI-A-1
-bind = , XF86Calculator, centerwindow
-bind = , XF86Calculator, moveactive, 675 0
+# bind = , XF86Calculator, centerwindow
+# bind = , XF86Calculator, moveactive, 675 0
 
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 90% 95%] copyq toggle
 bind = Ctrl, x, focusmonitor, HDMI-A-1
@@ -60,7 +56,7 @@ bind = Ctrl, x, togglespecialworkspace, my_copy
 bind = Ctrl, x, exec, resize_center.sh 90% 95%
 
 # drop down terminal
-workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
+workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty --title='term_util' -e tmux new -s UTILITY
 bind = , KP_Up, togglespecialworkspace, term_util
 bind = SHIFT, KP_Up, setfloating
 bind = , KP_Up, exec, resize_center.sh 98% 98%
