--- a/hyprland.conf
+++ b/hyprland.conf
@@ -16,6 +16,7 @@ $fileManager = $terminal --title="yazi" -e yazi
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 source = ~/.config/hypr/sources/monitors.conf
+source = ~/.config/hypr/sources/main_submap.conf
 source = ~/.config/hypr/sources/submaps.conf
 source = ~/.config/hypr/sources/specialWorkspaces.conf
 source = ~/.config/hypr/sources/windowrules.conf
@@ -78,17 +79,17 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod Ctrl, P, exec, $bin/pwm #-> Password Manager
-bind = $mainMod, Return, layoutmsg, swapwithmaster
+bind = $mainMod CTRL, P, exec, $bin/pwm #-> Password Manager
+bind = $mainMod, Space, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
-
+bind = $mainMod, w, exec, wp_random.sh
+bind = $mainMod, m, exec, smc -n "pkill rofi || rofi -show drun" #-> men(u)
 # bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
 bind = $mainMod, Q, killactive
-bind = $mainMod Ctrl, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
+bind = $mainMod CTRL, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
 
-bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
-BIND = $mainMod, w, exec, wp_random.sh #-> wallpaper randomizer
+# bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
 bind = $mainMod, f, togglefloating 
 
 # Move focus with mainMod + arrow keys
@@ -100,17 +101,17 @@ bind = , XF86Back, focusmonitor, 0
 bind = , XF86Forward, focusmonitor, 1
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
-bind = $mainMod Ctrl, l, layoutmsg, movewindowto r
-bind = $mainMod Ctrl, h, layoutmsg, movewindowto l
-bind = $mainMod Ctrl, k, layoutmsg, movewindowto u
-bind = $mainMod Ctrl, j, layoutmsg, movewindowto d
+bind = $mainMod CTRL, l, layoutmsg, movewindowto r
+bind = $mainMod CTRL, h, layoutmsg, movewindowto l
+bind = $mainMod CTRL, k, layoutmsg, movewindowto u
+bind = $mainMod CTRL, j, layoutmsg, movewindowto d
 bind = $mainMod SHIFT, l, exec, best_keys.sh mvright
 bind = $mainMod SHIFT, h, exec, best_keys.sh mvleft
 
-bind = $mainMod SHIFT Ctrl, b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py
-bind = $mainMod Ctrl, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu -i #-> bind list
+bind = $mainMod SHIFT CTRL, b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py
+bind = $mainMod CTRL, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu -i #-> bind list
 
-# bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
+# bind = CTRL, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
