--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -70,7 +70,7 @@ windowrule {
 
 windowrule = match:title hyprConf, workspace 3
 windowrule = match:title fishConf, workspace 3
-windowrule = match:title kittyConf, workspace 3
+windowrule = match:title ghosttyConf, workspace 3
 windowrule = match:title nvimConf, workspace 3
 windowrule = match:title wayConf, workspace 3
 windowrule = match:title binConf, workspace 3
@@ -80,6 +80,16 @@ windowrule = match:class thunar, size 50% 50%
 windowrule = match:class org.qutebrowser.qutebrowser workspace 1
 windowrule = match:class live_server monitor:DVI-D-1 special:notes
 windowrule = match:class Conky noblur
+
+
+windowrule {
+		name = notes
+		float = true
+		match:title = notes
+
+		size = 1190 1390
+		animation = popin
+}
 
 windowrule {
 		name = "Save File"
