--- a/hyprland.conf
+++ b/hyprland.conf
@@ -15,6 +15,7 @@ $fileManager = $terminal --title="yazi" -e yazi
 # $menu = pkill wofi || wofi --show drun
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# sources
 source = ~/.config/hypr/sources/monitors.conf
 source = ~/.config/hypr/sources/main_submap.conf
 source = ~/.config/hypr/sources/submaps.conf
@@ -22,6 +23,7 @@ source = ~/.config/hypr/sources/specialWorkspaces.conf
 source = ~/.config/hypr/sources/windowrules.conf
 source = ~/.config/hypr/sources/autostart.conf
 source = ~/.config/hypr/sources/look_and_feel.conf
+
 
 #for libadwaita gtk4 apps you can use this command:
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
@@ -38,6 +40,11 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
+
+# For KDE Wallet
+# env = XDG_CURRENT_DESKTOP,KDE
+# env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/kwalletd/agent.socket
+# env = GPG_AGENT_INFO,$XDG_RUNTIME_DIR/kwalletd/gpg.socket:0:1
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -129,13 +136,14 @@ bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle 
 bindel = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ #-> Brightness up 5%
 bindel = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- #-> Brightness down 5%
 
-# Requires playerctl
+# Media Keys
 bindl = , XF86AudioNext, exec, playerctl next #-> Next track
 bindl = , XF86AudioPause, exec, playerctl play-pause #-> Play/Pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause #-> Play/Pause
 bindl = , XF86AudioPrev, exec, playerctl previous #-> Previous track
 bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o - #-> Screenshot
 bind = SHIFT, print, exec, sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - #-> 4 second Screenshot
+
 
 # NOTE:  workspace rules
 workspace = w[tv1], gapsout:0, gapsin:0
