--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -30,20 +30,12 @@ windowrule {
 
 		size = 1024 512
 }
+
 workspace = special:fm, rounding:false, monitor:0, on-created-empty:thunar
 bind = $mainMod SHIFT, e, togglespecialworkspace, fm
 bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
-# notes
-# windowrule {
-# 		name = notes
-# 		float = true
-# 		match:title = notes
-#
-# 		size = 1190 1390
-# 		animation = popin
-# }
-#
+# Notes
 workspace = special:notes, rounding:false, monitor:0, on-created-empty:ghostty  --title='notes' -e nvim /home/mike/md_notes/index.md
 bind = , XF86Calculator, togglespecialworkspace, notes
 bind = , XF86Calculator, focusmonitor, HDMI-A-1
