--- a/sources/autostart.conf
+++ b/sources/autostart.conf
@@ -3,9 +3,9 @@
 #################
 
 exec-once = /usr/lib/pam_kwallet_init
-exec-once = hyprctl dismissnotify
+# exec-once = hyprctl dismissnotify
 exec-once = hyprpm reload -n
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 # exec-once = /home/mike/bin/bar -r
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
@@ -14,8 +14,9 @@ exec-once = copyq --start-server
 # exec-once = otd-daemon
 exec-once = swww-daemon
 exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
-# exec-once = wl-paste --watch cliphist store
+exec-once = wl-paste --watch cliphist store
 exec-once = syncthing --no-browser &
 exec-once = flatpak run io.github.martchus.syncthingtray --wait &
+exec-once = sleep 1
+exec = nwg-look -a
 # exec-once = sleep4 && noisetorch -i
-
