--- a/hypridle.conf
+++ b/hypridle.conf
@@ -20,8 +20,8 @@ general {
 
 listener {
     timeout = $wbt
-    on-timeout = killall waybar
-    on-resume = exec /home/mike/bin/hypr_bar.sh -r
+    # on-timeout = killall waybar
+    # on-resume = exec /home/mike/bin/hypr_bar.sh -r
 }
 
 listener {
