--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -1,6 +1,6 @@
 background {
     monitor = HDMI-A-1
-    path = /home/mike/wallpaper/dark/abstract-lines-dark-4k-mg.jpg
+    path = /home/mike/.config/hypr/lock_paper/wrinkled.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
@@ -16,7 +16,7 @@ background {
 
 background {
     monitor = DVI-D-1
-    path = /home/mike/wallpaper/dark/dark_stairs.jpg
+    path = /home/mike/.config/hypr/lock_paper/grungy.jpg
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
