--- a/sources/inner_submaps.conf
+++ b/sources/inner_submaps.conf
@@ -30,6 +30,7 @@ bind = , b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py #-> Update
 #-s mako
 bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded" #-> reload mako
 bind = , k, exec, killall mako #-> kill mako
+bind = , r, exec, smc -n "killall ironbar && ironbar || ironbar"
 #-s
 bind = , i, exec, smc -n info_script #-> Info Files
 bind = , e, exec, smc -n ~/bin/mail #-> Send Email
