--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -11,6 +11,7 @@ master {
 		slave_count_for_center_master = 3
 		center_master_fallback = center
 		always_keep_position = false
+		smart_resizing = true
 
 }
 
@@ -144,7 +145,7 @@ animations {
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in he nkeybinds section below
-    preserve_split = true # You probably want this
+    preserve_split = false # You probably want this
 }
 
     # allow_small_split = true
