--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -19,7 +19,8 @@ workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; s
 bind = , XF86Mail, togglespecialworkspace, email
 bind = , XF86Mail, exec, resize_center.sh 95% 95%
 # filemanagers
-workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty -e yazi
+workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float] ghostty -e yazi
+# workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] ghostty -e yazi
 bind = $mainMod, e, togglespecialworkspace, my_yazi
 bind = $mainMod, e, exec, resize_center.sh 95% 92%
 
