--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -1,5 +1,4 @@
 # NOTE: --------------------------------------------
-$menu = pkill wofi || wofi --show drun
 bind = $mainMod, Return, submap, Quick_Menu
 submap = Quick_Menu
 bind = , Return, exec, smc -n "ghostty -e tmux" #-> Terminal
@@ -12,10 +11,9 @@ bind = CTRL, Return, exec, smc -n 'ghostty --title="floater"'  #-> Terminal (Flo
 #-s (w)eb
 #-s (e)mail
 #-s (k)rita
-#-s (f)acebook
 #-s (c)ode
 #-s (m)usic
-#-s 1 - 10
+#-s Worspaces 1 - 10
 #-s
 
 
@@ -23,9 +21,8 @@ bind = , e, exec, smc -h "workspace name:Email" #-d
 bind = , h, exec, smc -h "workspace name:Home" #-d
 bind = , w, exec, smc -h "workspace name:Web" #-d
 bind = , k, exec, smc -h "workspace name:Krita" #-d
-bind = , f, exec, smc -h "workspace name:Facebook" #-d
 bind = , c, exec, smc -h "workspace name:Code" #-d
-# bind = , XF86Tools, exec, smc -h "workspace name:Music" #-d
+bind = , m, exec, smc -h "workspace name:Music" #-d
 bind = , 1, exec, smc -h "workspace 1" #-d
 bind = , 3, exec, smc -h "workspace 3" #-d
 bind = , 2, exec, smc -h "workspace 2" #-d
@@ -40,7 +37,6 @@ bind =  SHIFT, e,exec, smc -h "movetoworkspace name:Email" #-d
 bind =  SHIFT, h,exec, smc -h "movetoworkspace name:Home" #-d
 bind =  SHIFT, w, exec, smc -h "movetoworkspace name:Web" #-d
 bind =  SHIFT, k, exec, smc -h "movetoworkspace name:Krita" #-d
-bind =  SHIFT, f, exec, smc -h "movetoworkspace name:Facebook" #-d
 bind =  SHIFT, c, exec, smc -h "movetoworkspace name:Code" #-d
 bind = SHIFT, m, exec, smc -h "movetoworkspace name:Music" #-d
 bind = SHIFT, 1, exec, smc -h "movetoworkspace 1" #-d
@@ -53,22 +49,26 @@ bind = SHIFT, 8, exec, smc -h "movetoworkspace 8" #-d
 bind = SHIFT, 9, exec, smc -h "movetoworkspace 9" #-d
 bind = SHIFT, 0, exec, smc -h "movetoworkspace 0" #-d
 #-s Scrolling
+bind = , o, exec, smc -n "normcap" #-> OCR
 bind = , left, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
 bind = , right, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
 bind = Ctrl, f, exec, smc -c "layoutmsg fit all" #-> [F]it All
 bind = , a, exec, smc -c "layoutmsg togglefit" #-> Re-[a]lign
 #-s
-bind = , c, centerwindow 
-#-s Back = Workspace to monitor left
-#-s Forward = Workspace to monitor right
+#-s (c)enter Window
+bind = , c, centerwindow  #-d 
+#-s <- = Workspace to monitor left
+#-s -> = Workspace to monitor right
 bind = , XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-d
 bind = , XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #-d
-bind = , t, togglefloating
-bind = , r, exec, smc -n reset.sh #-> Reset View
+#-s (f)loating Toggle
+bind = , f, togglefloating #-d
+#-s (r)eset view
+bind = , r, exec, smc -n reset.sh #-d 
 #-s
-#-s backspace = exit
+#-s backspace = main
 #-s esc = exit
-bind = , backspace, submap, reset #-d
+bind = , backspace, submap, main #-d
 bind = , escape, submap, reset #-d
 submap = reset
 
@@ -78,11 +78,27 @@ submap = reset
 bind = $mainMod, b, submap, bar
 submap = bar
 #-s
+bind = , i, exec, smc -n "killall ironbar && ironbar || ironbar"
 bind = , h, exec, bar -b #-> Toggle Waybar Big
 bind = , l, exec, bar -s #-> Toggle Waybar Small
 bind = , k, exec, killall waybar #-> Kill Waybar
 bind = , r, exec, bar -r #-> Restore Waybar
 bind = , x, exec, killall waybar && bar -r #-> Restart Waybar
+#-s
+#-s backspace = main menu
+#-s esc = exit
+bind = , backspace, submap, main #-d
+bind = , escape, submap, reset #-d
+submap = reset
+
+
+bind = , print, submap, copy
+submap = copy
+#-s
+
+bind = , 1, exec, smc -n 'grim -g "$(slurp)"' - | swappy -f - -o - #-> Screenshot
+bind = , 2, exec, smc -n 'sleep 4 && grim -g "$(slurp)"' - | swappy -f - -o - #-> 4 second Screenshot
+bind = , 3, exec, smc -n "normcap" #-> Text OCR
 #-s
 #-s backspace = main menu
 #-s esc = exit
