--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -132,6 +132,15 @@ windowrule {
 }
 
 windowrule {
+		name = bible
+		match:title = bibl
+		float = true
+
+        size = 1024 768
+		center = on
+}
+
+windowrule {
 		name = "Facebook"
 		match:initial_title = http://www.facebook.com - qutebrowser
 		workspace = 4
