--- a/hyprland.conf
+++ b/hyprland.conf
@@ -12,7 +12,6 @@
 $terminal = ghostty
 $run = ghostty -e 
 $fileManager = $terminal --title="yazi" -e yazi
-# $menu = pkill wofi || wofi --show drun
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # sources
@@ -86,18 +85,20 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86HomePage, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod CTRL, P, exec, $bin/pwm #-> Password Manager
+bind = $mainMod CTRL, P, exec, pwm #-> Password Manager
 bind = $mainMod, Space, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod, w, exec, wp_random.sh
 bind = $mainMod, m, exec, smc -n "pkill rofi || rofi -show drun" #-> men(u)
-# bind = $mainMod SHIFT, Return, exec, new_term.sh #-> Terminal
 bind = $mainMod, Q, killactive
 bind = $mainMod CTRL, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
 
 # bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
 bind = $mainMod, f, togglefloating 
+bind = $mainMod, d, exec, dict.sh
+bind = $mainMod, 1, exec, ghostty --title="bibl" -e bibl.sh
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, exec, best_keys.sh left
@@ -143,8 +144,9 @@ bindl = , XF86AudioNext, exec, playerctl next #-> Next track
 bindl = , XF86AudioPause, exec, playerctl play-pause #-> Play/Pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause #-> Play/Pause
 bindl = , XF86AudioPrev, exec, playerctl previous #-> Previous track
-bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o - #-> Screenshot
-bind = SHIFT, print, exec, sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - #-> 4 second Screenshot
+# bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o - #-> Screenshot
+# bind = $mainMod, print, exec, sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - #-> 4 second Screenshot
+# bind = $mainMod SHIFT, print, exec, normcap
 
 
 # NOTE:  workspace rules
