--- a/sources/autostart.conf
+++ b/sources/autostart.conf
@@ -2,11 +2,11 @@
 ### AUTOSTART ###
 #################
 
+# exec-once = mako
 exec-once = /usr/lib/pam_kwallet_init
 # exec-once = hyprctl dismissnotify
-exec-once = hyprpm reload -n
+exec = hyprpm reload -n
 # exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-# exec-once = /home/mike/bin/bar -r
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec = easyeffects --gapplication-service
@@ -20,4 +20,3 @@ exec-once = syncthing --no-browser &
 exec-once = flatpak run io.github.martchus.syncthingtray --wait &
 exec-once = sleep 1
 exec = nwg-look -a
-# exec-once = sleep4 && noisetorch -i
