--- a/hyprland.conf
+++ b/hyprland.conf
@@ -41,7 +41,9 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
 # For KDE Wallet
-# env = XDG_CURRENT_DESKTOP,KDE
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_BACKEND,wayland
 # env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/kwalletd/agent.socket
 # env = GPG_AGENT_INFO,$XDG_RUNTIME_DIR/kwalletd/gpg.socket:0:1
 
@@ -93,6 +95,7 @@ bind = $mainMod, m, exec, smc -n "pkill rofi || rofi -show drun" #-> men(u)
 bind = $mainMod, Q, killactive
 bind = $mainMod CTRL, Q, exec, $terminal --title="ExitScript" -e exit_script.sh #-> Exit Script
 bind = $mainMod SHIFT, Q, exec, hyprshutdown
+bind = $mainMod, 3, exec, emote
 
 # bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
 bind = $mainMod, f, togglefloating 
