--- a/sources/autostart.conf
+++ b/sources/autostart.conf
@@ -7,12 +7,14 @@ exec-once = /usr/lib/pam_kwallet_init
 # exec-once = hyprctl dismissnotify
 exec = hyprpm reload -n
 # exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-exec-once = systemctl --user start hyprpolkitagent
+# e0xec-once = systemctl --user start hyprpolkitagent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
 exec-once = hypridle
 exec = easyeffects --gapplication-service
 # exec-once = otd-daemon
 exec-once = copyq --start-server
-# exec-once = otd-daemon
+exec-once = otd-daemon
 exec-once = swww-daemon
 exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
 exec-once = wl-paste --watch cliphist store
