--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -3,7 +3,7 @@ $OutputRight = DVI-D-1
 # Big Monitor
 monitor=$OutputLeft, 2560x1440@120.00Hz, 0x0, 1
 # monitor=$OutputLeft, addreserved, 10, 10, 20, 20    
-workspace = name:Home, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true
+workspace = name:Home, monitor:$OutputLeft, default:true, defaultName:Home, decorate:true, on-created-empty:ghostty -e tmux
 workspace = name:Web, monitor:$OutputLeft, defaultName:Web, decorate:true, on-created-empty:google-chrome-stable
 workspace = name:Krita, monitor:$OutputLeft, defaultName:Drawing, on-created-empty:krita
 workspace = name:Facebook, monitor:$OutputLeft, defaultName:Facebook, decorate:true, on-created-empty:qutebrowser www.facebook.com www.messenger.com
