--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -96,8 +96,8 @@ bind = , print, submap, copy
 submap = copy
 #-s
 
-bind = , 1, exec, smc -n 'grim -g "$(slurp)"' - | swappy -f - -o - #-> Screenshot
-bind = , 2, exec, smc -n 'sleep 4 && grim -g "$(slurp)"' - | swappy -f - -o - #-> 4 second Screenshot
+bind = , 1, exec, smc -n 'grim -g "$(slurp)" - | swappy -f - -o - '#-> Screenshot
+bind = , 2, exec, smc -n 'sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - ' #-> 4 second Screenshot
 bind = , 3, exec, smc -n "normcap" #-> Text OCR
 #-s
 #-s backspace = main menu
