--- a/sources/monitors.conf
+++ b/sources/monitors.conf
@@ -18,7 +18,7 @@ workspace = 9, monitor:$OutputLeft, defaultName:Chat, decorate:true
 monitor=$OutputRight, 1920x1080@60.00Hz, 2560x360, 1.0
 workspace = name:Code, monitor:$OutputRight, defaultName:Code, on-created-empty:ghostty -e tmux, decorate:true
 workspace = name:Music, monitor:$OutputRight, defaultName:Music, decorate:true, on-created-empty:ghostty -e ncmpcpp --host localhost
-workspace = name:Email, monitor:$OutputRight, defaultName:Email, decorate:true, on-created-empty:evolution
+workspace = name:Email, monitor:$OutputRight, defaultName:Email, decorate:true, on-created-empty:thunderbird
 workspace = 2, monitor:$OutputRight, defaultName:(2) Files, decorate:true
 workspace = 4, monitor:$OutputRight, defaultName:(4) Chat, decorate:true
 workspace = 6, monitor:$OutputRight, defaultName:(6) Chat, decorate:true
