--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -15,7 +15,7 @@ bind = , KP_Page_Down, exec, resize_center.sh 98% 95%
 workspace = special:glavaWS, rounding:false, monitor:0, on-created-empty: glava
 bind = $mainMod, XF86Tools, togglespecialworkspace, glavaWS
 
-workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
+workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] thunderbird
 bind = , XF86Mail, togglespecialworkspace, email
 bind = , XF86Mail, exec, resize_center.sh 95% 95%
 # filemanagers
