--- a/hyprland.conf
+++ b/hyprland.conf
@@ -100,7 +100,7 @@ bind = $mainMod, 3, exec, emote
 # bind = , Menu, exec, pkill rofi || rofi -show drun #-> menu
 bind = $mainMod, f, togglefloating 
 bind = $mainMod, d, exec, dict.sh
-bind = $mainMod, 1, exec, ghostty --title="bibl" -e bibl.sh
+bind = $mainMod, 1, exec, rofi_text.sh dev/bible.txt
 
 
 # Move focus with mainMod + arrow keys
